Prepare PawTrack for friends alpha deploy
